added a location icon

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <script src="https://use.fontawesome.com/8d6d7e0a01.js"></script>
   <meta charset="utf-8">
   <title>Startpup</title>
   <base href="/">
