--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <link href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet">
+  <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/8d6d7e0a01.js"></script>
   <meta charset="utf-8">
   <title>Startpup</title>
