--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://use.fontawesome.com/8d6d7e0a01.js"></script>
   <script type="text/javascript" src="//platform.linkedin.com/in.js">
-    export const linkedinConfig = {
-      apiKey: masterLinkedinConfig.apiKey,
-      // onLoad: masterLinkedinConfig.authDomain,
-      // authorize: masterLinkedinConfig.databaseURL,
-      lang: en_US
-    };
+    // export const linkedinConfig = {
+    //   apiKey: masterLinkedinConfig.apiKey,
+    //   // onLoad: masterLinkedinConfig.authDomain,
+    //   // authorize: masterLinkedinConfig.databaseURL,
+    //   lang: en_US
+    // };
 </script>
   <meta charset="utf-8">
   <title>Startpup</title>
